examples/invalid/16_tuple_type.lane
// invalid: tuple types are not part of v1
let pair : (Int, Bool) = (1, true)

